# azure-vmss-scaling-trend

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
deploy/: ama-metrics-settings-configmap-v1.yaml  grafana-dashboard-lustre.json  grafana-dashboard-vmss.json  kubernetes.yaml  lustre-alert-rules.yaml
src/vmss_metrics_exporter/: __init__.py  azure_managed_lustre.py  azure_resource_graph.py  collector.py  config.py  credentials.py  leader_election.py  main.py  models.py
tests/: test_azure_managed_lustre.py  test_azure_resource_graph.py  test_collector.py  test_config.py  test_credentials.py  test_leader_election.py
